--- a/src/css/slapka.css
+++ b/src/css/slapka.css
@@ -11,10 +11,6 @@ body {
     background-color: #f4f4f4;
 }
 
-.gloves {
-	cursor: not-allowed;
-	user-select: none;
-}
 
 .item {
 	padding: 40px;
@@ -23,7 +19,10 @@ body {
 	height: fit-content;
 	widows: fit-content;
 }
-
+.block {
+	cursor: not-allowed;
+	user-select: none;
+}
 .box {
 	display: flex;
 	justify-content: space-around;
